# app00

./: Dockerfile  Jenkinsfile  README.md  pyproject.toml
.devcontainer/: devcontainer.json
src/app00/: __init__.py
tests/: test_mod00.py
